GNOME Bugzilla – Bug 754413
Fix return value error in champlain_view_get_world
Last modified: 2015-09-02 02:42:43 UTC
Please see the patch. champlain_view_get_world has a return value, so it cannot use g_return_if_fail.
Created attachment 310440 [details] [review] Fix return value error in champlain_view_get_world
Right, thanks for noticing. Funny the -Wall switch in gcc doesn't report this, at least on my machine. I guess you used LLVM on FreeBSD which is probably stricter.
GCC doesn't report this problem because '#pragma GCC system_header' is used in gmessages.h. https://bugzilla.gnome.org/show_bug.cgi?id=753310