Fix return value error in champlain_view_get_world

https://bugzilla.gnome.org/show_bug.cgi?id=754413